Remove calculacted values from server response, move logic for player response creation to own class in order to test that separately. Add fake db response.
